Changed styling for about page to make sure the image covers entire page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -133,8 +133,13 @@ a:hover {
 }
 
 #about-box {
-  background-image: url("https://i.ibb.co/r5BCCL2/SP1.jpg");
-  background-position: cover;
+  background-image: url("https://i.ibb.co/yBPDZDx/about.jpg");
+  min-height: 100vh;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  justify-content: center;
 }
 
 .opacity {
